Jpa connected